Revision history for {{$dist->name}}

{{$NEXT}}

0.018     2016-07-29
        - mysql: create tables can now work with UTF-8
        - 'stats' also provides 'count of additional key/value pairs'
        - add CREATED_AT/VALUE_ID to essentials when returning single point

0.017     2016-03-04
        - support for 'stats' - provide counters of points and metrics

0.016     2016-02-26
        - fix AUTOINCREMENT on raw_bench_bundles
        - fix DB-specific special NULL handling of undefined values
        - support for 'listkeys'

0.015     2015-09-23
        - more refactoring of common methods between db backends

0.014     2015-09-17
        - namespace confusion carnage - redo cpan upload

0.013     2015-09-17
        - forked into different namespace to better fit the common theme
          was: Tapper-Benchmark
          now: BenchmarkAnything-Storage-Backend-SQL

0.012     2015-09-17
        - refactor common methods between db backends

0.011     2015-09-16
        - let the db take care of compression in raw queue

0.010     2015-09-15
        - drop feature 'switch' - replace given/when with classic if/else

0.009     2015-09-11
        - DB tuning/tweaking:
          * avoid deadlocks due to gap locking
          * fix missing finish_transaction
          * be crisp about UNSIGNED and use BLOB for raw queue
          * simplify resetting of AutoCommit mode

0.008     2015-09-08
        - enable transactions for garbage collector

0.007     2015-09-08
        - queuing mode for high-throughput incoming results
          * part 1) adds raw results into separate table
          * part 2) process one of those values,
                    likely called in bundles or from multiple workers
          * part 3) garbage collect successfully processed results

0.006     2015-08-26
        - disable caching due to wrong behaviour

0.005     2015-08-24
        - larger field sizes
        - select_benchmark_point_essentials()